--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css'>
-<link rel="stylesheet" href="css/mystyle.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="">
